--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@types/react-dom": "^17.0.14",
     "antd": "^4.22.4",
     "antd-mask-input": "^0.1.15",
-    "axios": "^1.3.5",
-    "axios-mock-adapter": "^1.20.0",
+    "axios": "^1.6.8",
+    "axios-mock-adapter": "^1.22.0",
     "country-list": "^2.2.0",
     "dayjs": "^1.11.0",
     "echarts": "^5.1.2",
     "echarts-for-react": "^3.0.1",
     "elt-react-credit-cards": "^0.0.1",
     "emoji-picker-react": "^4.4.8",
+    "eslint-plugin-unicorn": "^52.0.0",
     "google-map-react": "^2.1.10",
     "history": "^5.3.0",
     "i18next": "^20.4.0",
@@ -114,26 +115,27 @@
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.10",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "craco-alias": "^3.0.1",
-    "eslint": "^5.16.0",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^6.0.0",
     "less": "^4.1.2",
     "less-plugin-clean-css": "^1.5.1",
-    "lint-staged": "^11.1.4",
+    "lint-staged": "^15.2.2",
     "prettier": "^2.3.1",
     "stylelint": "^16.3.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.0.0",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpackbar": "^5.0.0-3"
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpackbar": "^6.0.1"
   },
   "lint-staged": {
     "*/**/*.{js,ts,tsx}": "yarn lint"
