--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postinstall-postinstall": "^2.1.0",
     "rc-color-picker": "^1.2.6",
     "react": "^17.0.2",
+    "react-chat-elements": "v12.0.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -115,10 +116,10 @@
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.10",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "craco-alias": "^3.0.1",
-    "eslint": "^9.0.0",
+    "eslint": "^9.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
@@ -135,13 +136,11 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.0.0",
     "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^5.1.4",
     "webpackbar": "^6.0.1"
   },
   "lint-staged": {
     "*/**/*.{js,ts,tsx}": "yarn lint"
-  },
-  "engines": {
-    "node": "16.x"
   },
   "resolutions": {
     "@types/react": "17.0.2",
